# podcast-transcript-convert

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  publish.yml
podcast_transcript_convert/: __main__.py  convert.py  database.py  errors.py  file_typing.py  file_utils.py  models.py
podcast_transcript_convert/converters/: __init__.py  any_to_simple.py  html_to_json.py  json_to_json.py  json_to_simple.py  srt_to_json.py  vtt_to_json.py  xml_to_json.py
tests/: test_convert.py  test_database.py  test_errors.py  test_file_typing.py  test_file_utils.py  test_html.py  test_json.py  test_main.py  test_models.py  test_properties.py  test_simple.py  test_srt.py  test_vtt.py  test_xml.py
