[build-system]
requires = ["uv_build>=0.8.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "podcast-transcript-convert"
version = "0.2.0"
description = "Convert podcast transcripts from HTML, SRT, WebVtt, Podlove etc into PodcastIndex JSON."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = ["convert", "podcast", "podcastindex", "transcripts", "srt", "vtt", "webvtt", "podlove", "pci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["beautifulsoup4", "loguru", "lxml", "webvtt-py"]

[dependency-groups]
dev = [
    "hypothesis",
    "pyrefly",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.scripts]
transcript2json = "podcast_transcript_convert.__main__:main"

[project.urls]
Homepage = "https://github.com/hbmartin/podcast-transcript-convert"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv"]

# Keep the existing project formatting style.
line-length = 88
indent-width = 4
target-version = "py313"

lint.select = ["ALL"]
lint.ignore = ["COM812", "D100", "D101", "D103", "D104", "D107", "D203", "D213", "S608"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "E501", "INP001", "PLR2004", "PT011", "S101", "SLF001"]

[tool.pyrefly]
project-includes = ["podcast_transcript_convert"]

[tool.ty.src]
include = ["podcast_transcript_convert"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
